--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: "kieslee's blog"
 username: "kieslee"
 email: "lleelm@gmail.com"
-url: "http://kieslee。github.io"
+uri: "http://kieslee.github.io"
 
 # Build settings
 # markdown: kramdown
