--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,6 @@ uri: "http://kieslee.github.io"
 # Build settings
 # markdown: kramdown
 markdown: redcarpet
-# pygments: true
-highlighter: pygments
+pygments: true
+# highlighter: pygments
 permalink: pretty
