--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,9 @@ title: "kieslee's blog"
 username: "kieslee"
 email: "lleelm@gmail.com"
 url: "http://kieslee.github.io"
-#url: "http://127.0.0.1:4000"
 baseurl: "http://kieslee.github.io"
+#url: "http://127.0.0.1:4000"
+#baseurl: ""
 
 # Build settings
 # markdown: kramdown
